wip, deploying to github

--- a/index.html
+++ b/index.html
@@ -39,42 +39,36 @@ works:
   - path: _works/flowers.md
 members:
   - avatar: /assets/images/@stock/member-7.png
-    name: Lily Jebari
+    name: Brandon Bailey
     position: Founder
     socials:
-      - link: http://twitter.com
-        icon: twitter
-      - link: http://facebook.com
-        icon: facebook
+      - link: https://www.linkedin.com/in/brandon-bailey-3732885b/
+        icon: linkedin
+      - link: https://www.instagram.com/dammitBrandon/
+        icon: instagram
     desc:
       "As the founder and CEO of Wrap, and as an interactions and visual design specialist, she knows that user- centred and easy-to-use design is an essential way to distinguish a good product and an awesome product."
   - avatar: /assets/images/@stock/member-9.png
-    name: Mark Wayne
+    name: Kellee Bassaragh
     position: Creative Director
     socials:
-      - link: http://twitter.com
-        icon: twitter
-      - link: http://facebook.com
-        icon: facebook
-      - link: http://dribbble.com
-        icon: dribbble
+      - link: https://www.linkedin.com/in/kelleeb/
+        icon: linkedin
+      - link: https://www.instagram.com/kelleeb/
+        icon: instagram
     desc:
       "Mark started designing web sites back in 1992. Since then, he has worked for a wide range of digital agencies in the UK and America. At Wrap, Mark’s role means solving all kinds of visual design problems."
   - avatar: /assets/images/@stock/member-8.png
-    name: Clare Watson
+    name: Micheal Evans
     position: Front-end Developer
     socials:
-      - link: http://twitter.com
-        icon: twitter
-      - link: http://facebook.com
-        icon: facebook
-      - link: http://tumblr.com
-        icon: tumblr
+      - link: https://www.linkedin.com/in/michaelevans215/
+        icon: linkedin
     desc:
       "Clare is a senior front-end developer here at Wrap, specialises in building blocks of the web: HTML, CSS, and JavaScript. She has almost ten years experiencs in the front-end development."
   - avatar: /assets/images/@stock/member-4-4.png
-    name: Jone Bucan
-    position: Senior Designer
+    name: Christina Day
+    position: UX/UI Designer
     socials:
       - link: http://twitter.com
         icon: twitter
@@ -121,6 +115,9 @@ clients:
   - /assets/images/@stock/client-4.png
   - /assets/images/@stock/client-1.png
   - /assets/images/@stock/client-6.png
+
+courses:
+
 ---
 
 <div class='full no-padding parallax home-video-wrapper'>
@@ -384,7 +381,7 @@ clients:
 <div class='full'>
   <div class='row'>
     <div class='large-8 columns large-centered'>
-      {% include section-title.html small_title="we are happy" title="Featured clients" %}
+      {% include section-title.html small_title="we are serving" title="Featured Courses" %}
     </div>
   </div>
 </div>
