--- a/index.html
+++ b/index.html
@@ -2,30 +2,18 @@
 layout: default
 onepage: true
 services:
-  - title: Design
+  - title: Web Development 101
     icon: fa fa-bell-o
     desc: Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus.
     bg: /assets/images/@stock/service-item-1-bg.jpg
-  - title: Art direction
+  - title: Intro to music production
     icon: fa fa-lightbulb-o
     desc: Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus.
     bg: /assets/images/@stock/service-item-2-bg.jpg
-  - title: Branding
+  - title: Social Media Fundimentals
     icon: fa fa-bookmark-o
     desc: Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus.
     bg: /assets/images/@stock/service-item-3-bg.jpg
-  - title: Photography
-    icon: fa fa-heart-o
-    desc: Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus.
-    bg: /assets/images/@stock/service-item-4-bg.jpg
-  - title: Marketing
-    icon: fa fa-flag-o
-    desc: Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus.
-    bg: /assets/images/@stock/service-item-5-bg.jpg
-  - title: Support
-    icon: fa fa-comment-o
-    desc: Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus.
-    bg: /assets/images/@stock/service-item-6-bg.jpg
 works:
   - path: _works/diff-foods.md
   - path: _works/sketch-book.md
@@ -180,7 +168,7 @@ courses:
   <div class='row'>
     <div class='large-8 columns large-centered'>
       <div class="section-title">
-        <p class="small-title">main services</p>
+        <p class="small-title">main courses</p>
         <h2>We transform business.</h2>
       </div>
     </div>
@@ -315,34 +303,6 @@ courses:
   </div>
 </div>
 
-
-<a id='blog'></a>
-<div class='full grey'>
-  <div class='row'>
-    <div class='large-8 columns large-centered'>
-      {% include section-title.html small_title="latest posts" title="Wrap ideas." %}
-    </div>
-  </div>
-</div>
-<div class="full grey no-padding no-overflow">
-  {% for post in site.posts limit:3 %}
-    <div class='large-4 columns'>
-      <div class='mod modBlogPost simple'>
-        <div class='content'>
-          <p class='date'>{{ post.date | date: "%B %d, %Y" }}</p>
-          <h3><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h3>
-          <div class='spacing'></div>
-          <p>
-            <a class='button boxed yellow tiny' href='{{ post.url | relative_url }}'>Read more</a>
-          </p>
-        </div>
-      </div>
-      <div class="four spacing"></div>
-    </div>
-  {% endfor %}
-</div>
-
-
 <div class='full no-overflow no-padding parallax' style="background-image: url({{ "/assets/images/@stock/customers-bg.jpg" | relative_url }})">
   <div class="left-half">
     <div class="two spacing"></div>
@@ -376,28 +336,6 @@ courses:
       </div>
     </div>
   </div>
-</div>
-
-<div class='full'>
-  <div class='row'>
-    <div class='large-8 columns large-centered'>
-      {% include section-title.html small_title="we are serving" title="Featured Courses" %}
-    </div>
-  </div>
-</div>
-<div class="full no-padding">
-  <div class="clients">
-    <div class='row'>
-      {% for client in page.clients %}
-        <div class='large-3 medium-6 small-6 columns'>
-          <div class="client">
-            <a href="javascript:void(0)"><img alt="" src="{{ client | relative_url }}" /></a>
-          </div>
-        </div>
-      {% endfor %}
-    </div>
-  </div>
-  <div class="four spacing"></div>
 </div>
 
 <div class="four spacing"></div>
