changed the hero, the team page and the services to courses

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ works:
 members:
   - avatar: /assets/images/@stock/member-9.png
     name: Brandon Bailey
-    position: CEO
+    position: CEO and Founder
     socials:
       - link: https://www.linkedin.com/in/brandon-bailey-3732885b/
         icon: linkedin
@@ -38,7 +38,7 @@ members:
       "As the founder and CEO of Wrap, and as an interactions and visual design specialist, she knows that user- centred and easy-to-use design is an essential way to distinguish a good product and an awesome product."
   - avatar: /assets/images/@stock/member-9.png
     name: Kellee Bassaragh
-    position: Creative Director
+    position: Growth and Marketing
     socials:
       - link: https://www.linkedin.com/in/kelleeb/
         icon: linkedin
@@ -48,15 +48,17 @@ members:
       "Mark started designing web sites back in 1992. Since then, he has worked for a wide range of digital agencies in the UK and America. At Wrap, Mark’s role means solving all kinds of visual design problems."
   - avatar: /assets/images/@stock/member-8.png
     name: Micheal Evans
-    position: Front-end Developer
+    position: Brand and Community Engagement
     socials:
       - link: https://www.linkedin.com/in/michaelevans215/
         icon: linkedin
+      - link: https://www.instagram.com/m_i_c_evans/
+        icon: instagram
     desc:
       "Clare is a senior front-end developer here at Wrap, specialises in building blocks of the web: HTML, CSS, and JavaScript. She has almost ten years experiencs in the front-end development."
   - avatar: /assets/images/@stock/member-4-4.png
-    name: Vassilli Skarine
-    position: Software Engineer
+    name: Tyler Grady
+    position: Curricular Development
     socials:
       - link: http://twitter.com
         icon: twitter
@@ -115,16 +117,15 @@ courses:
     </video>
     <div class='overlay'></div>
     <div class='layer'>
-      <p class="small-title">Make the right choice </p>
+      <p class="small-title">Preparing the Next Generation </p>
       <h1 class='thin' id="to-be-update">
-         <span class="fir">Too fast</span><br/>
-         <span class="sec">Too wild</span><br/>
-         <span class="thir">Too different</span>
+         <span class="fir">TutorD Scholars </span><br/>
+        
       </h1>
       <h2 class='thin'>
-       This is wrap, a creative digital company, creating solutions for any visual identity project, espetically for digital experiences and brand identities.
+       Teaching urban youth in-demand 21st century skills in 1 day workshops and courses
        {% assign nav_obj = site.data.nav | where:'section_id','works' | first %}
-       <a href='{{ "index.html" | append:nav_obj.path | relative_url }}'>View our works</a>
+       <a href='{{ "index.html" | append:nav_obj.path | relative_url }}'>View our courses</a>
       </h2>
     </div>
   </div>
@@ -136,12 +137,13 @@ courses:
   <div class='row'>
     <div class='large-8 columns large-centered'>
       <div class="section-title">
-        <p class="small-title">Creative experience</p>
+        <p class="small-title">Creating Experiences</p>
         <h2>
-          Creating solutions  <br/>
-          is what we do best.
+          Delivering the best learning experience
+            <br/>
+    is our mission.
         </h2>
-        <p class="big-size">We are creating solutions for any visual identity project, espetically for digital experiences and brand identities.</p>
+        <p class="big-size">We create an engaging and thoughtful space to allow our scholars and volunteers to identify with one another and connect on a human level.</p>
         <div class="four spacing"></div>
       </div>
     </div>
@@ -152,12 +154,12 @@ courses:
   <div class="right-half">
     <div class="two spacing"></div>
     <div class="section-header alt white">
-      <h2>client focused</h2>
+      <h2>scholar focused</h2>
     </div>
-    <p class="light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cupiditate rem aspernatur eos tempora corporis cum consequuntur quasi explicabo, aut omnis, pariatur minus numquam deserunt reprehenderit dignissimos illum voluptas animi!</p>
-    <p class="light">Dolor sit amet, consectetur adipisicing elit. Quod, eius optio eum hic dicta veritatis voluptates nisi amet nulla at!</p>
+    <p class="light">With the whole student in mind, we at TutorD Scholars provide an inclusive atmosphere. We provide the laptops and also food the students making sun that we can meet as many needs as possible, so that they can focus on learning.</p>
+    <p class="light"></p>
     <div class="two spacing"></div>
-    <a href="#" class="button small">Meat the team</a>
+    <a href="#" class="button small">Meet the team</a>
     <div class="three spacing"></div>
   </div>
 </div>
@@ -169,7 +171,7 @@ courses:
     <div class='large-8 columns large-centered'>
       <div class="section-title">
         <p class="small-title">main courses</p>
-        <h2>We transform business.</h2>
+        <h2>Transforming the workforce</h2>
       </div>
     </div>
   </div>
@@ -251,7 +253,7 @@ courses:
 <div class='full dark-grey'>
   <div class='row'>
     <div class='large-8 columns large-centered'>
-      {% include section-title.html small_title="The team" title="Hello! This is us." %}
+      {% include section-title.html small_title="The team" title="Greetings! Meet your Tutors." %}
     </div>
   </div>
 </div>
