added images, changed index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ works:
     style: wide
   - path: _works/flowers.md
 members:
-  - avatar: /assets/images/@stock/member-9.png
+  - avatar: /assets/images/members/brandon-bailey.jpg
     name: Brandon Bailey
     position: CEO and Founder
     socials:
@@ -56,7 +56,7 @@ members:
         icon: instagram
     desc:
       "Clare is a senior front-end developer here at Wrap, specialises in building blocks of the web: HTML, CSS, and JavaScript. She has almost ten years experiencs in the front-end development."
-  - avatar: /assets/images/@stock/member-4-4.png
+  - avatar: assets/images/members/tyler-grady.jpg
     name: Tyler Grady
     position: Curricular Development
     socials:
@@ -74,21 +74,27 @@ team_slides:
   - /assets/images/@stock/slide-full-10.jpg
 
 testimonials:
-  - quote: "Reprehenderit eos et non et ut eum reprehenderit quis sequi quia vel repellendus id. Velit quit blanditiis dolor quam error eos dolores sequi eaque rerum est. Velit quit blanditiis dolor quam error eos dolores sequi eaque rerum est."
+  - quote: "I had a great experience with this program. The TutorD Scholars program taught me more about computer coding than I already knew coming in from my CS class and I would just like to say thank you for everything so far."
     author:
-      name: "David White"
-      avatar: '/assets/images/@stock/author-avatar-1.png'
-      position: 'Designer at Huglab'
+      name: "B'yond Taylor"
+      avatar: '/assets/images/scholars/byond-taylor-1.png'
+      position: 'Scholar Zero'
   - quote: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing."
     author:
-      name: "David White"
-      avatar: '/assets/images/@stock/author-avatar-2.png'
-      position: 'Designer at Huglab'
+      name: "Tyler Grady"
+      avatar: 'assets/images/members/tyler-grady.jpg'
+      position: 'Former Web Dev Scholar'
   - quote: "Reprehenderit eos et non et ut eum reprehenderit quis sequi quia vel repellendus id. Velit quit blanditiis dolor quam error eos dolores sequi eaque rerum est."
     author:
-      name: "David White"
-      avatar: '/assets/images/@stock/author-avatar-3.png'
-      position: 'Designer at Huglab'
+      name: "Jarrel Bailey"
+      avatar: 'assets/images/scholars/jarrel-bailey.jpg'
+      position: 'Studying Cyber Security'
+  - quote: "Shits fucking epic!"  
+    author:
+      name: "Vassilli Skarine"
+      avatar: '/assets/images/members/vassilli-skarine.jpg'
+      position: 'Volunteer - Software Engineer'
+
 
 clients:
   - /assets/images/@stock/client-1.png
@@ -310,7 +316,7 @@ courses:
     <div class="two spacing"></div>
     <div class="row">
       <div class="section-header alt white">
-        <h2>What our clients say</h2>
+        <h2>What our scholars say</h2>
       </div>
       <div class='mod modTestimonials simple'>
         <div class='row'>
