Updated CNAME to dev env, and updated Experiences Copy

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ testimonials:
       name: "Jarrel Bailey"
       avatar: 'assets/images/scholars/jarrel-bailey.jpg'
       position: 'Studying Cyber Security'
-  - quote: "Shits fucking epic!"  
+  - quote: "Shits fucking epic!"
     author:
       name: "Vassilli Skarine"
       avatar: '/assets/images/members/vassilli-skarine.jpg'
@@ -126,7 +126,7 @@ courses:
       <p class="small-title">Preparing the Next Generation </p>
       <h1 class='thin' id="to-be-update">
          <span class="fir">TutorD Scholars </span><br/>
-        
+
       </h1>
       <h2 class='thin'>
        Teaching urban youth in-demand 21st century skills in 1 day workshops and courses
@@ -143,11 +143,11 @@ courses:
   <div class='row'>
     <div class='large-8 columns large-centered'>
       <div class="section-title">
-        <p class="small-title">Creating Experiences</p>
+        <p class="small-title">Learning Experiences</p>
         <h2>
-          Delivering the best learning experience
+          Immersive experiences,  with the
             <br/>
-    is our mission.
+          the scholar first.
         </h2>
         <p class="big-size">We create an engaging and thoughtful space to allow our scholars and volunteers to identify with one another and connect on a human level.</p>
         <div class="four spacing"></div>
