--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ courses:
   <div class='row'>
     <div class='large-8 columns large-centered'>
       <div class="section-title">
-        <p class="small-title">Creating Experiences</p>
+        <p class="small-title">Learning Experiences</p>
         <h2>
           Delivering the best learning experience
             <br/>
