fixed anchor tag

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ courses:
     <p class="light">With the whole student in mind, we at TutorD Scholars provide an inclusive atmosphere. We provide the laptops and also food the students making sun that we can meet as many needs as possible, so that they can focus on learning.</p>
     <p class="light"></p>
     <div class="two spacing"></div>
-    <a href="#" class="button small">Meet the team</a>
+    <a href="#team" class="button small">Meet the team</a>
     <div class="three spacing"></div>
   </div>
 </div>
