added brandon's photo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ works:
     style: wide
   - path: _works/flowers.md
 members:
-  - avatar: /assets/images/members/kellee.jpg
+  - avatar: /assets/images/members/brandon-bailey.jpg
     name: Brandon Bailey
     position: CEO and Founder
     socials:
@@ -123,7 +123,7 @@ courses:
     </video>
     <div class='overlay'></div>
     <div class='layer'>
-      <p class="small-title">Preparing the Next Generation </p>
+      <p class="small-title">Formulating the Next Generation </p>
       <h1 class='thin' id="to-be-update">
          <span class="fir">TutorD Scholars </span><br/>
 
