--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ courses:
 <div class='full no-padding parallax home-video-wrapper'>
   <div class='fullscreen'>
     <video autoplay='autoplay' id='fullscreen-video' loop='loop'>
-<!--      <source src='{{ "/assets/images/@stock/cover-video.optimized.mp4" | relative_url }}' type='video/mp4'>-->
+      <source src='{{ "/assets/images/highlight-reel.mp4" | relative_url }}' type='video/mp4'>
     </video>
     <div class='overlay'></div>
     <div class='layer'>
