--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ works:
     style: wide
   - path: _works/flowers.md
 members:
-  - avatar: /assets/images/members/kellee.jpg
+  - avatar: assets/images/members/brandon-bailey-resize.jpg
     name: Brandon Bailey
     position: CEO and Founder
     socials:
@@ -279,6 +279,13 @@ courses:
         <img class="avatar" alt="" src="{{ member.avatar | relative_url }}" />
       </div>
     </div>
+<!--
+      <ul class="small-block-grid-3">
+  <li></li>
+  <li></li>
+  <li><img class="avatar" alt="" src="{{ member.avatar | relative_url }}" /></li>
+</ul>
+-->
     {% endfor %}
   </div>
 </div>
