added new images, updated to optimized video

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@ members:
       "Jone started designing web sites back in 1992. Since then, he has worked for a wide range of digital agencies in the UK and America. At Wrap, Jone’s role means solving all kinds of visual design problems."
 
 team_slides:
-  - /assets/images/@stock/slide-full-1.jpg
-  - /assets/images/@stock/slide-full-8.jpg
-  - /assets/images/@stock/slide-full-11.jpg
-  - /assets/images/@stock/slide-full-10.jpg
+  - /assets/images/stills/MVI_5606.00_00_08_00.Still008.jpg
+  - /assets/images/stills/MVI_5606.00_00_08_00.Still005.jpg
+  - /assets/images/stills/MVI_5606.00_00_01_06.Still003.jpg
+  - /assets/images/stills/MVI_5606.00_00_19_05.Still006.jpg
 
 testimonials:
   - quote: "I had a great experience with this program. The TutorD Scholars program taught me more about computer coding than I already knew coming in from my CS class and I would just like to say thank you for everything so far."
@@ -119,7 +119,7 @@ courses:
 <div class='full no-padding parallax home-video-wrapper'>
   <div class='fullscreen'>
     <video autoplay='autoplay' id='fullscreen-video' loop='loop'>
-<!--      <source src='{{ "/assets/images/@stock/cover-video.optimized.mp4" | relative_url }}' type='video/mp4'>-->
+      <source src='{{ "/assets/images/highlight-reel.optimized.mp4" | relative_url }}' type='video/mp4'>
     </video>
     <div class='overlay'></div>
     <div class='layer'>
@@ -156,7 +156,7 @@ courses:
     <div class="four spacing"></div>
   </div>
 </div>
-<div class="full no-overflow no-padding parallax" style="background-image: url({{ "/assets/images/@stock/about-1.jpg" | relative_url }})">
+<div class="full no-overflow no-padding parallax" style="background-image: url({{ "/assets/images/stills/MVI_5606.00_00_04_00.Still002.jpg" | relative_url }})">
   <div class="right-half">
     <div class="two spacing"></div>
     <div class="section-header alt white">
@@ -317,7 +317,7 @@ courses:
   </div>
 </div>
 
-<div class='full no-overflow no-padding parallax' style="background-image: url({{ "/assets/images/@stock/customers-bg.jpg" | relative_url }})">
+<div class='full no-overflow no-padding parallax' style="background-image: url({{ "/assets/images/stills/MVI_5606.00_00_08_12.Still004.jpg" | relative_url }})">
   <div class="left-half">
     <div class="two spacing"></div>
     <div class="row">
