added new testimonials and added highlighted reels

--- a/index.html
+++ b/index.html
@@ -89,12 +89,16 @@ testimonials:
       name: "Jarrel Bailey"
       avatar: 'assets/images/scholars/jarrel-bailey.jpg'
       position: 'Studying Cyber Security'
-  - quote: "Shits fucking epic!"
+  - quote: "I had the pleasure of working with Tutor D Scholars last fall. It was amazing to work with other young professionals who are so talented. The dedication from the students was awesome to experience as well. Each weekend we got to work with the kids and see them progress from eager students to young adults with amazing potential. I am so happy I was a part of the program."
     author:
-      name: "Vassilli Skarine"
-      avatar: '/assets/images/members/vassilli-skarine.jpg'
-      position: 'Volunteer - Software Engineer'
-
+      name: "Christina Day"
+      avatar: '/assets/images/members/christina-day.png'
+      position: 'Volunteer - UX/UI Designer'
+  - quote: "After going to the workshop it is apparent that TutorD Scholars is an organization that genuinely values and respects that everyone learns differently. During the class, I could see students feel more confident and empowered to learn and become curious..."
+    author:
+      name: "Aya Pogrebinsky"
+      avatar: '/assets/images/members/aya-pogrebinsky.jpg'
+      position: 'Volunteer - UX/UI Designer'
 
 clients:
   - /assets/images/@stock/client-1.png
@@ -119,7 +123,7 @@ courses:
 <div class='full no-padding parallax home-video-wrapper'>
   <div class='fullscreen'>
     <video autoplay='autoplay' id='fullscreen-video' loop='loop'>
-      <source src='{{ "/assets/images/highlight-reel.optimized.mp4" | relative_url }}' type='video/mp4'>
+      <source src='{{ "/assets/images/highlight-reel.mp4" | relative_url }}' type='video/mp4'>
     </video>
     <div class='overlay'></div>
     <div class='layer'>
@@ -161,7 +165,7 @@ courses:
     <div class="four spacing"></div>
   </div>
 </div>
-<div class="full no-overflow no-padding parallax" style="background-image: url({{ "/assets/images/stills/MVI_5606.00_00_04_00.Still002.jpg" | relative_url }})">
+<div class="full no-overflow no-padding parallax" style="background-image: url({{ "/assets/images/stills/MVI_5606.00_00_08_12.Still004.jpg" | relative_url }})">
   <div class="right-half">
     <div class="two spacing"></div>
     <div class="section-header alt white">
