change course descriptions

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@ onepage: true
 services:
   - title: Web Development 101
     icon: fa fa-laptop
-    desc: Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus.
+    desc: Two hour introductionary workshop foucusing on a positive experience with web development technologies.
     bg: /assets/images/@stock/service-item-1-bg.jpg
-  - title: Intro to music production
-    icon: fa fa-music
-    desc: Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus.
+  - title: Intro to Web Development 
+    icon: fa fa-laptop
+    desc: Free six week apprenticeship teaching dedicated scholars the fundamentals of web development with the goal of helping them acheive their assperations in the tech industry. 
     bg: /assets/images/@stock/service-item-2-bg.jpg
-  - title: Social Media Fundimentals
+  - title: Eight week Profesional Training
     icon: fa fa-bookmark-o
-    desc: Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus.
+    desc: TBD
     bg: /assets/images/@stock/service-item-3-bg.jpg
 works:
   - path: _works/diff-foods.md
@@ -176,7 +176,7 @@ courses:
       as possible so that they can focus on learning.</p>
     <p class="light"></p>
     <div class="two spacing"></div>
-    <a href="#team" class="button small">Click here to become a Scholar</a>
+    <a href="#services" class="button small">Click here to become a Scholar</a>
     <div class="three spacing"></div>
   </div>
 </div>
@@ -253,12 +253,12 @@ courses:
     <div class='large-8 columns'>
       <h3 class="white">Customized to meet your needs.</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur inventore minimar.
+        We honor all learning styles and skill levels. And we will meet you where you are.
       </p>
     </div>
     <div class='large-4 columns'>
       <p>
-        <a class='button small boxed' href='#'>Download Now</a>
+<!--        <a class='button small boxed' href='#'>Download Now</a>-->
       </p>
     </div>
   </div>
