Minor changes to the team bios

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ services:
     icon: fa fa-laptop
     desc: Two hour introductionary workshop foucusing on a positive experience with web development technologies.
     bg: /assets/images/@stock/service-item-1-bg.jpg
-  - title: Intro to Web Development 
+  - title: Intro to Web Development
     icon: fa fa-laptop
-    desc: Free six week apprenticeship teaching dedicated scholars the fundamentals of web development with the goal of helping them acheive their assperations in the tech industry. 
+    desc: Free six week apprenticeship teaching dedicated scholars the fundamentals of web development with the goal of helping them acheive their assperations in the tech industry.
     bg: /assets/images/@stock/service-item-2-bg.jpg
   - title: Eight week Profesional Training
     icon: fa fa-bookmark-o
@@ -35,7 +35,7 @@ members:
       - link: https://www.instagram.com/dammitBrandon/
         icon: instagram
     desc:
-      "As the founder and CEO of Wrap, and as an interactions and visual design specialist, she knows that user- centred and easy-to-use design is an essential way to distinguish a good product and an awesome product."
+      "As the founder and CEO of TutorD Scholars, as a software engineer with over 10 years of experience, he knows that user-centred and easy-to-grasp educational approach is an essential way to distinguish a good educational product and an life changing product."
   - avatar: assets/images/members/kellee.jpg
     name: Kellee Bassaragh
     position: Growth and Marketing
@@ -45,7 +45,7 @@ members:
       - link: https://www.instagram.com/kelleeb/
         icon: instagram
     desc:
-      "Mark started designing web sites back in 1992. Since then, he has worked for a wide range of digital agencies in the UK and America. At Wrap, Mark’s role means solving all kinds of visual design problems."
+      "Kellee started designing marketing campaigns back in 1992. Since then, she has worked for a wide range of digital agencies in the US and Jamacia. At TutorD Scholars, Kellee’s role means solving all kinds of communication and outreach problems."
   - avatar: /assets/images/members/michael.jpg
     name: Micheal Evans
     position: Brand and Community Engagement
@@ -55,7 +55,7 @@ members:
       - link: https://www.instagram.com/m_i_c_evans/
         icon: instagram
     desc:
-      "Clare is a senior front-end developer here at Wrap, specialises in building blocks of the web: HTML, CSS, and JavaScript. She has almost ten years experiencs in the front-end development."
+      "Mike is a Customer Success and Sales professional in technology, specialises in building blocks of the content and connecting with our core audience."
   - avatar: assets/images/members/tyler.jpg
     name: Tyler Grady
     position: Curriculum Development
@@ -65,7 +65,7 @@ members:
       - link: http://facebook.com
         icon: facebook
     desc:
-      "Jone started designing web sites back in 1992. Since then, he has worked for a wide range of digital agencies in the UK and America. At Wrap, Jone’s role means solving all kinds of visual design problems."
+      "Tyler started teaching back in 2008. Since then, he has worked for a wide range of educational spaces in Cali. At TutorD Scholars, Tyler’s role means solving all kinds of visual design problems and helping build out curriculums that students can easily connect ideas and grasp concepts."
 
 team_slides:
   - /assets/images/stills/MVI_5606.00_00_08_00.Still008.jpg
