Added GA, updated Movement.fm link

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@ onepage: true
 services:
   - title: Web Development 101
     icon: fa fa-laptop
-    desc: Two hour workshop focused on a positive experience in web development.
+    desc: Two hour workshop focused on a positive experience in Web Development.
     bg: /assets/images/@stock/service-item-1-bg.jpg
     link: https://www.movement.fm/event/Web%20Development%20101-2693
   - title: Intro to Web Development
     icon: fa fa-laptop
-    desc: Free six week apprenticeship teaching the fundamentals of web development.
+    desc: Free Six Week Apprenticeship Teaching The Fundamentals of Web Development.
     bg: /assets/images/@stock/service-item-2-bg.jpg
-    link: https://www.movement.fm/event/Intro%20to%20Web%20Dev%20Apprenticeship-2694
-  - title: Eight week Profesional Training
+    link: https://www.movement.fm/event/Intro%20to%20Web%20Dev-2785
+  - title: Eight Week Professional Training
     icon: fa fa-bookmark-o
     desc: Coming Soon.
     bg: /assets/images/@stock/service-item-3-bg.jpg
