testing github pages environment value

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ courses:
     <div class='large-8 columns large-centered'>
       <div class="section-title">
         <p class="small-title">Learning Experiences</p>
+        {{ jekyll.environment }}
         <h2>
           We create an engaging and thoughtful space
             <br/>
