--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 onepage: true
-google_analytics: "UA-180860185-1"
 services:
   - title: Web Development 101
     icon: fa fa-laptop
@@ -150,6 +149,10 @@ courses:
     <div class='large-8 columns large-centered'>
       <div class="section-title">
         <p class="small-title">Learning Experiences</p>
+        {{ jekyll.environment }}
+        {{ site.google_analytics }}
+
+
         <h2>
           We create an engaging and thoughtful space
             <br/>
