update website course links to finli website

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@ services:
     icon: fa fa-laptop
     desc: Two hour workshop focused on a positive experience in Web Development.
     bg: /assets/images/@stock/service-item-1-bg.jpg
-    link: https://www.movement.fm/event/Web%20Development%20101-2693
+    link: https://web.finli.com/classes/course-offerings/
   - title: Intro to Web Development
     icon: fa fa-laptop
     desc: Free Six Week Apprenticeship Teaching The Fundamentals of Web Development.
     bg: /assets/images/@stock/service-item-2-bg.jpg
-    link: https://www.movement.fm/event/Intro%20to%20Web%20Dev-2785
+    link: https://web.finli.com/classes/course-offerings/
   - title: Eight Week Professional Training
     icon: fa fa-bookmark-o
-    desc: Coming Soon.
+    desc: 8 Week Apprenticeship focused on building Fullstack JavaScript Applications.
     bg: /assets/images/@stock/service-item-3-bg.jpg
-    link: #
+    link: https://web.finli.com/classes/course-offerings/
 works:
   - path: _works/diff-foods.md
   - path: _works/sketch-book.md
@@ -247,6 +247,7 @@ courses:
 <!--    </ul>-->
 <!--  </div>-->
 <!--</div>-->
+
 <div class='full dark no-padding '>
   <div class="four spacing"></div>
   <div class='row'>
