minor copy update

--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@ courses:
       <h2>scholar focused</h2>
     </div>
     <p class="light">With the whole student in mind, we at TutorD Scholars provide an inclusive atmosphere.
-      We provide the laptops and also food the students making sun that we can meet as many needs
-      as possible so that they can focus on learning.</p>
+      We provide the laptops and also food the students making sure their we meet them where they are and
+      their needs so that they can focus on learning.</p>
     <p class="light"></p>
     <div class="two spacing"></div>
     <a href="#services" class="button small">Click here to become a Scholar</a>
